--- a/bc_proj/clinic/templates/clinic/statistics.html
+++ b/bc_proj/clinic/templates/clinic/statistics.html
@@ -1,39 +1,51 @@
 {% extends 'main/layout.html' %}
 
+{% load static %}
+
 {% block title %}Статистика{% endblock %}
 
+{% block custom_css %}
+<link type="text/css" href="{% static 'clinic/css/statistics.css' %}" rel="stylesheet"/>
+{% endblock %}
+
 {% block content %}
-    <h1>Статистика</h1>
-    <section>
-        <h2>Список клиентов</h2>
-        <ul>
+    <h1 class="page-title">Статистика</h1>
+
+    <section class="clients-section">
+        <h2 class="section-title">Список клиентов</h2>
+        <ul class="clients-list">
             {% for client in clients_alphabetical %}
-                <li>{{ client.0 }} {{ client.1 }} {{ client.2 }}</li>
+                <li class="client-item">{{ client.0 }} {{ client.1 }} {{ client.2 }}</li>
             {% endfor %}
         </ul>
     </section>
-    <section>
-        <h2>Общая сумма всех заказов</h2>
-        <p>{{ total_orders_sum }}</p>
+
+    <section class="orders-sum-section">
+        <h2 class="section-title">Общая сумма всех заказов</h2>
+        <p class="total-orders-sum">{{ total_orders_sum }}</p>
     </section>
-    <section>
-        <h2>Статистические показатели по заказам</h2>
-        <p>Среднее: {{ average_order }}</p>
-        <p>Мода: {{ mode_order }}</p>
-        <p>Медиана: {{ median_order }}</p>
+
+    <section class="orders-statistics-section">
+        <h2 class="section-title">Статистические показатели по заказам</h2>
+        <p class="average-order">Среднее: {{ average_order }}</p>
+        <p class="mode-order">Мода: {{ mode_order }}</p>
+        <p class="median-order">Медиана: {{ median_order }}</p>
     </section>
-    <section>
-        <h2>Статистические показатели по возрасту клиентов</h2>
-        <p>Среднее: {{ average_age }}</p>
-        <p>Медиана: {{ median_age }}</p>
+
+    <section class="age-statistics-section">
+        <h2 class="section-title">Статистические показатели по возрасту клиентов</h2>
+        <p class="average-age">Среднее: {{ average_age }}</p>
+        <p class="median-age">Медиана: {{ median_age }}</p>
     </section>
-    <section>
-        <h2>Популярность услуг</h2>
-        <p>Наиболее популярная категория: {{ most_popular_service_category }}</p>
-        <p>Наиболее прибыльная категория: {{ most_profitable_service_category }}</p>
+
+    <section class="services-popularity-section">
+        <h2 class="section-title">Популярность услуг</h2>
+        <p class="most-popular-category">Наиболее популярная категория: {{ most_popular_service_category }}</p>
+        <p class="most-profitable-category">Наиболее прибыльная категория: {{ most_profitable_service_category }}</p>
     </section>
-    <section>
-    <h2>Гистограмма доходов врачей</h2>
-    <img src="{{ histogram_url }}" alt="Гистограмма доходов врачей">
-</section>
+
+    <section class="doctors-income-histogram-section">
+        <h2 class="section-title">Гистограмма доходов врачей</h2>
+        <img class="histogram-image" src="{{ histogram_url }}" alt="Гистограмма доходов врачей">
+    </section>
 {% endblock %}
