--- a/bc_proj/clinic/templates/clinic/add_promocode.html
+++ b/bc_proj/clinic/templates/clinic/add_promocode.html
@@ -1,15 +1,32 @@
 {% extends 'main/layout.html' %}
 
+{% load static %}
+
 {% block title %}Добавить промокод{% endblock %}
 
+{% block custom_css %}
+<link type="text/css" href="{% static 'clinic/css/add_promocode.css' %}" rel="stylesheet"/>
+{% endblock %}
+
 {% block content %}
-    <h3>Напишите кодовое слово промокода, значение скидки в % и дату истечения срока действия</h3>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.code }}
-        {{ form.discount }}
-        {{ form.expiration_date }}
-        <button type="submit">Применить</button>
-        <span>{{ error }}</span>
-    </form>
+    <div id="promocode-form-container">
+        <h3 class="form-title">Напишите кодовое слово промокода, значение скидки в % и дату истечения срока действия</h3>
+        <form id="promocode-form" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="code-field">Код</label>
+                {{ form.code }}
+            </div>
+            <div class="form-group">
+                <label for="discount-field">Скидка (%)</label>
+                {{ form.discount }}
+            </div>
+            <div class="form-group">
+                <label for="expiration-date-field">Дата истечения</label>
+                {{ form.expiration_date }}
+            </div>
+            <button type="submit" class="btn submit-btn">Применить</button>
+            <span class="error-message">{{ error }}</span>
+        </form>
+    </div>
 {% endblock %}
